# cgear

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cgear.sublime-project  cgear.sublime-workspace  conanfile.txt  main.cpp  pool.h
ast/: CMakeLists.txt  ast.h  module.cpp  module.h  pool.h  visitor.h
ast/function/: definition.h  function.cpp  function.h  prototype.h  visitor.h
ast/operations/: binary.h  call.h  code.h  literal.h  operation.cpp  operation.h  ternary.h  variable.h  visitor.h
ast/operators/: block.h  calc.h  if.h  nope.h  operator.cpp  operator.h  return.h  variable.h  visitor.h  while.h
ast/statement/: function.h  statement.h  type.h  variable.h
ast/types/: int.h  name.h  tuple.h  type.cpp  type.h
backends/: CMakeLists.txt
backends/constexpr/: integer.h
generator/: analysis.cpp  context.cpp  context.h  function.h  info.h  null.cpp  null.h  overload.cpp  overload.h  process.cpp  tuple.h  type.cpp  type.h  value.cpp  value.h  var.h  void.h
grammar/: ast.h  expression.cpp  expression.h  function.cpp  function.h  head.hpp  instruction.cpp  instruction.h  module.cpp  module.h  type.cpp  type.h
grammar/ast/: ast.h  instance.h  module.cpp  module.h  pool.h  visitor.h
grammar/ast/function/: definition.h  function.cpp  function.h  prototype.h  visitor.h
grammar/ast/operations/: binary.h  call.h  literal.h  operation.cpp  operation.h  ternary.h  unary.h  variable.h  visitor.h
grammar/ast/operators/: block.h  calc.h  if.h  nope.h  operator.cpp  operator.h  repeat.h  return.h  variable.h  visitor.h  while.h
grammar/ast/types/: int.cpp  int.h  name.h  tuple.cpp  tuple.h  type.cpp  type.h  visitor.h
grammar/lexer/: constant_table.cpp  constant_table.h  lexer.cpp  lexer.h  token.h
lexer/: CMakeLists.txt  constant_table.cpp  constant_table.h  lexer.cpp  lexer.h  token.h
model/: CMakeLists.txt  all.h  analysis.cpp  context.cpp  context.h  function.h  overload.cpp  overload.h  tuple.cpp  tuple.h  type.h  value.cpp  value.h
model/old/: null.cpp  null.h  void.h
model/types/: info.cpp  info.h  let.h  raw.h  ref.h  types.cpp  var.h
parser/: CMakeLists.txt  expression.cpp  expression.h  function.cpp  function.h  instruction.cpp  instruction.h  module.cpp  module.h  statement.cpp  statement.h  type.cpp  type.h
process/: analysis.cpp  context.h
syntax/: code.cpp  context.h  head.hxx  operation.cpp  operation.h  tree.cpp  tree.h
test/: CMakeLists.txt  model.cpp
